kubernetes/deployment-back.yaml
apiVersion: "apps/v1"
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  template: 
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          imagePullPolicy: Never
          image: my-forum-backend:latest
          ports:
            - containerPort: 5000
