kubernetes/service-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-back
spec:
  type: NodePort
  ports:
    - nodePort: 31600
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: backend
