kubernetes/service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-front
spec:
  type: NodePort
  ports:
    - nodePort: 31317
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: frontend
