kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-component
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: service-back
                port:
                  number: 5000
          - path: /grafana/?(.*)
            pathType: Prefix
            backend:
              service:
                name: foo-grafana
                port:
                  number: 80
          - path: /prometheus/?(.*)
            pathType: Prefix
            backend:
              service:
                name: foo-kube-prometheus-stack-prometheus
                port:
                  number: 9090
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: service-front
                port:
                  number: 80
